test/spec_vectors/simd_splat/fail/module_9.wat
(module (func (result v128) i32x4.splat (f32.const 2.0)))